--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-config": "^0.11.5",
+    "react-native-dotenv": "^0.1.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-progress": "^3.4.0",
     "react-native-vector-icons": "^4.5.0",
