Expanded babel parser

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,8 @@
   "env": {
     "development": {
       "plugins": [
-        "transform-react-jsx-source"
+        "transform-react-jsx-source",
+        "transform-class-properties",
       ]
     }
   }
