--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-dotenv": "^0.1.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-progress": "^3.4.0",
+    "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.25",
     "react-redux": "^5.0.6",
