--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-native-config": "^0.11.5",
     "react-native-dotenv": "^0.1.1",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-progress": "^3.4.0",
     "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^4.5.0",
+    "react-native-video": "^2.0.0",
     "react-navigation": "^1.0.0-beta.25",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
