--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.50.3",
     "react-native-config": "^0.11.5",
     "react-native-dotenv": "^0.1.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-orientation": "^3.1.3",
     "react-native-progress": "^3.4.0",
